[gd_scene load_steps=2 format=3 uid="uid://hud_scene"]

[ext_resource type="Script" path="res://ui/hud/hud.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="TopLeft" type="VBoxContainer" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 320.0
offset_bottom = 120.0

[node name="HealthBar" type="ProgressBar" parent="TopLeft"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
max_value = 500.0
value = 500.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="TopLeft/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "500 / 500"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TopCenter" type="Control" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="TargetFrame" type="PanelContainer" parent="TopCenter"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="TopCenter/TargetFrame"]
layout_mode = 2

[node name="TargetName" type="Label" parent="TopCenter/TargetFrame/VBox"]
layout_mode = 2
text = "Target Name"
horizontal_alignment = 1

[node name="TargetHealth" type="ProgressBar" parent="TopCenter/TargetFrame/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="BottomCenter" type="Control" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -140.0
offset_right = 300.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="AbilityBar" type="HBoxContainer" parent="BottomCenter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
theme_override_constants/separation = 8

[node name="AbilityQ" type="PanelContainer" parent="BottomCenter/AbilityBar"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="BottomCenter/AbilityBar/AbilityQ"]
layout_mode = 2
alignment = 1

[node name="Key" type="Label" parent="BottomCenter/AbilityBar/AbilityQ/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Q"
horizontal_alignment = 1

[node name="Icon" type="TextureRect" parent="BottomCenter/AbilityBar/AbilityQ/VBox"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4

[node name="Name" type="Label" parent="BottomCenter/AbilityBar/AbilityQ/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Ability"
horizontal_alignment = 1

[node name="Cooldown" type="ColorRect" parent="BottomCenter/AbilityBar/AbilityQ"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.5)

[node name="CooldownLabel" type="Label" parent="BottomCenter/AbilityBar/AbilityQ"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
vertical_alignment = 1

[node name="AbilityF" type="PanelContainer" parent="BottomCenter/AbilityBar"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="BottomCenter/AbilityBar/AbilityF"]
layout_mode = 2
alignment = 1

[node name="Key" type="Label" parent="BottomCenter/AbilityBar/AbilityF/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "F"
horizontal_alignment = 1

[node name="Icon" type="TextureRect" parent="BottomCenter/AbilityBar/AbilityF/VBox"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4

[node name="Name" type="Label" parent="BottomCenter/AbilityBar/AbilityF/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Ability"
horizontal_alignment = 1

[node name="Cooldown" type="ColorRect" parent="BottomCenter/AbilityBar/AbilityF"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.5)

[node name="CooldownLabel" type="Label" parent="BottomCenter/AbilityBar/AbilityF"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
vertical_alignment = 1

[node name="AbilityE" type="PanelContainer" parent="BottomCenter/AbilityBar"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="BottomCenter/AbilityBar/AbilityE"]
layout_mode = 2
alignment = 1

[node name="Key" type="Label" parent="BottomCenter/AbilityBar/AbilityE/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "E"
horizontal_alignment = 1

[node name="Icon" type="TextureRect" parent="BottomCenter/AbilityBar/AbilityE/VBox"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4

[node name="Name" type="Label" parent="BottomCenter/AbilityBar/AbilityE/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Ability"
horizontal_alignment = 1

[node name="Cooldown" type="ColorRect" parent="BottomCenter/AbilityBar/AbilityE"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.5)

[node name="CooldownLabel" type="Label" parent="BottomCenter/AbilityBar/AbilityE"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
vertical_alignment = 1

[node name="AbilityR" type="PanelContainer" parent="BottomCenter/AbilityBar"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="BottomCenter/AbilityBar/AbilityR"]
layout_mode = 2
alignment = 1

[node name="Key" type="Label" parent="BottomCenter/AbilityBar/AbilityR/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "R"
horizontal_alignment = 1

[node name="Icon" type="TextureRect" parent="BottomCenter/AbilityBar/AbilityR/VBox"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4

[node name="Name" type="Label" parent="BottomCenter/AbilityBar/AbilityR/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Ability"
horizontal_alignment = 1

[node name="Cooldown" type="ColorRect" parent="BottomCenter/AbilityBar/AbilityR"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.5)

[node name="CooldownLabel" type="Label" parent="BottomCenter/AbilityBar/AbilityR"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
vertical_alignment = 1

[node name="AbilityC" type="PanelContainer" parent="BottomCenter/AbilityBar"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="BottomCenter/AbilityBar/AbilityC"]
layout_mode = 2
alignment = 1

[node name="Key" type="Label" parent="BottomCenter/AbilityBar/AbilityC/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "C"
horizontal_alignment = 1

[node name="Icon" type="TextureRect" parent="BottomCenter/AbilityBar/AbilityC/VBox"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4

[node name="Name" type="Label" parent="BottomCenter/AbilityBar/AbilityC/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Ability"
horizontal_alignment = 1

[node name="Cooldown" type="ColorRect" parent="BottomCenter/AbilityBar/AbilityC"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.5)

[node name="CooldownLabel" type="Label" parent="BottomCenter/AbilityBar/AbilityC"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomRight" type="HBoxContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -80.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2
theme_override_constants/separation = 5

[node name="Hotbar1" type="PanelContainer" parent="BottomRight"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Key" type="Label" parent="BottomRight/Hotbar1"]
layout_mode = 2
text = "1"

[node name="Hotbar2" type="PanelContainer" parent="BottomRight"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Key" type="Label" parent="BottomRight/Hotbar2"]
layout_mode = 2
text = "2"

[node name="Hotbar3" type="PanelContainer" parent="BottomRight"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Key" type="Label" parent="BottomRight/Hotbar3"]
layout_mode = 2
text = "3"

[node name="Hotbar4" type="PanelContainer" parent="BottomRight"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Key" type="Label" parent="BottomRight/Hotbar4"]
layout_mode = 2
text = "4"

[node name="Hotbar5" type="PanelContainer" parent="BottomRight"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Key" type="Label" parent="BottomRight/Hotbar5"]
layout_mode = 2
text = "5"

[node name="GoldDisplay" type="Label" parent="BottomRight"]
layout_mode = 2
text = "$ 0"

[node name="TopRight" type="Control" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 200.0
grow_horizontal = 0

[node name="Minimap" type="SubViewportContainer" parent="TopRight"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="TopRight/Minimap"]
handle_input_locally = false
size = Vector2i(180, 180)
render_target_update_mode = 4

[node name="InteractionPrompt" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -150.0
offset_right = 100.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 0
text = "Press F to interact"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageDisplay" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 200.0
offset_right = 200.0
offset_bottom = 230.0
grow_horizontal = 2
horizontal_alignment = 1
vertical_alignment = 1
